complete crud of task, redis, exitHandler and validations
